[package]
name = "node-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.32", features=["derive"]}
websocket = "0.26.5"
websocket-base = "0.26.5"
parity-scale-codec = "3.2.2"
parity-scale-codec-derive = "3.1.4"

serde = { version = "1.0", optional = true, features = ["derive"] }

serde_json = "1.0.91"
hex = "0.4.3"

parity-util-mem = { version = '0.12.0', optional = true }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = false}
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = false}

sp-application-crypto = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = false}

[dev-dependencies]
assert_cmd = "1"
subxt = "0.25.0"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-core/std",
	"parity-util-mem",
    "sp-runtime/std",
    "serde",
	"sp-application-crypto/std",
]